fix: button link

--- a/styles.css
+++ b/styles.css
@@ -296,6 +296,7 @@ body.dark-mode .book-details p {
 a {
     text-decoration: none;
     color: inherit; /* Mantém a cor do texto herdada, se necessário */
+
 }
 .download-btn {
     background-color: #3187F1;
@@ -310,6 +311,7 @@ a {
     gap: 5px;
     margin: 0 auto; /* Centraliza o botão */
     text-decoration: none; /* Remove o sublinhado */
+    width: 100px;
 }
 
 .download-btn:hover {
